remove some visible todos, try to fix headings

--- a/src/client/views/Website.scss
+++ b/src/client/views/Website.scss
@@ -11,6 +11,7 @@
   }
   h1:first-of-type {
     padding: 0 1rem;
+    line-height: 0.25rem;
   }
 }
 .website {
